--- a/WinAPI/WinAPI.vcxproj.filters
+++ b/WinAPI/WinAPI.vcxproj.filters
@@ -1,74 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="API Framework">
+      <UniqueIdentifier>{ebb58c7c-e09f-4db6-b3ea-e4b060127d4c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="API Framework\PCH">
+      <UniqueIdentifier>{c972649c-b959-4a89-b97f-eba710a43a86}</UniqueIdentifier>
     </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="WinMain">
+      <UniqueIdentifier>{1af7aad3-4f72-4145-8bda-0253820eeb4d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="0716">
+    <Filter Include="API Framework\Utility">
+      <UniqueIdentifier>{af3636fa-bceb-4775-888b-320057eab4a2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="API Framework\Utility\Math">
+      <UniqueIdentifier>{6e3defbe-65a2-4e45-bd2d-4ab036381642}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HomeWork">
       <UniqueIdentifier>{9bbbaecb-67a0-4136-aa0d-3e0ae3916bc0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Stdafx.h">
+      <Filter>API Framework\PCH</Filter>
     </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="C3DVector.h">
+      <Filter>API Framework\Utility\Math</Filter>
     </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="C3DMatrix.h">
+      <Filter>API Framework\Utility\Math</Filter>
     </ClInclude>
-    <ClInclude Include="WinAPI.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="CommonMacroFuntion.h">
+      <Filter>API Framework\Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Homework0716_01.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework0716_02.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework0716_03.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Stdafx.cpp">
+      <Filter>API Framework\PCH</Filter>
+    </ClCompile>
     <ClCompile Include="WinAPI.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>WinMain</Filter>
     </ClCompile>
-    <ClCompile Include="Practice.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="C3DVector.cpp">
+      <Filter>API Framework\Utility\Math</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="C3DMatrix.cpp">
+      <Filter>API Framework\Utility\Math</Filter>
     </ClCompile>
-    <ClCompile Include="Practice2.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="WinMain.cpp">
+      <Filter>WinMain</Filter>
     </ClCompile>
-    <ClCompile Include="HomeWork0716_01.cpp">
-      <Filter>0716</Filter>
+    <ClCompile Include="Homework0717_01.cpp">
+      <Filter>HomeWork</Filter>
     </ClCompile>
-    <ClCompile Include="HomeWork0716_02.cpp">
-      <Filter>0716</Filter>
+    <ClCompile Include="Homework0717_02.cpp">
+      <Filter>HomeWork</Filter>
     </ClCompile>
-    <ClCompile Include="HomeWork0716_03.cpp">
-      <Filter>0716</Filter>
+    <ClCompile Include="Homework0717_03.cpp">
+      <Filter>HomeWork</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="WinAPI.rc">
-      <Filter>리소스 파일</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="small.ico">
-      <Filter>리소스 파일</Filter>
-    </Image>
-    <Image Include="WinAPI.ico">
-      <Filter>리소스 파일</Filter>
-    </Image>
   </ItemGroup>
   <ItemGroup>
     <Text Include="메모.txt" />
-    <Text Include="HomeWork.txt" />
+    <Text Include="HomeWork.txt">
+      <Filter>HomeWork</Filter>
+    </Text>
   </ItemGroup>
 </Project>
