--- a/WinAPI/WinAPI.vcxproj.filters
+++ b/WinAPI/WinAPI.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="HomeWork">
       <UniqueIdentifier>{9bbbaecb-67a0-4136-aa0d-3e0ae3916bc0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="API Framework\DesignPattern">
+      <UniqueIdentifier>{8aa070e2-6738-4ae6-942e-2b2620cd3d6f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="API Framework\DesignPattern\Singleton">
+      <UniqueIdentifier>{91fa67b7-84ed-41ce-b811-b97c2f1cb0af}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stdafx.h">
@@ -32,6 +38,12 @@
     </ClInclude>
     <ClInclude Include="CommonMacroFuntion.h">
       <Filter>API Framework\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="RnadomFuntion.h">
+      <Filter>API Framework\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="SingletonBase.h">
+      <Filter>API Framework\DesignPattern\Singleton</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +78,15 @@
       <Filter>HomeWork</Filter>
     </ClCompile>
     <ClCompile Include="Homework0717_03.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework0718_01.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework0718_02.cpp">
+      <Filter>HomeWork</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework0718_03.cpp">
       <Filter>HomeWork</Filter>
     </ClCompile>
   </ItemGroup>
