--- a/WinAPI/WinAPI.vcxproj.filters
+++ b/WinAPI/WinAPI.vcxproj.filters
@@ -64,6 +64,8 @@
     <ClInclude Include="MainGame.h">
       <Filter>ManagerClass</Filter>
     </ClInclude>
+    <ClInclude Include="ImageManager.h" />
+    <ClInclude Include="ImageResource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Homework0716_01.cpp">
@@ -74,9 +76,6 @@
     </ClCompile>
     <ClCompile Include="Homework0716_03.cpp">
       <Filter>HomeWork</Filter>
-    </ClCompile>
-    <ClCompile Include="WinAPI.cpp">
-      <Filter>WinMain</Filter>
     </ClCompile>
     <ClCompile Include="C3DVector.cpp">
       <Filter>API Framework\Utility\Math</Filter>
@@ -115,6 +114,8 @@
     <ClCompile Include="MainGame.cpp">
       <Filter>ManagerClass</Filter>
     </ClCompile>
+    <ClCompile Include="ImageManager.cpp" />
+    <ClCompile Include="ImageResource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="메모.txt" />
